# metashare

./: .clang-format  .clang-tidy  .gitignore  LICENSE  README.md  flake.nix  meson.build  meson_options.txt
.github/workflows/: ci.yml
client/desktop_test/: main.cpp  meson.build
client/gtk/: dev.metashare.StreamerUI.desktop  main.cpp  main_window.cpp  main_window.hpp  meson.build
client/quest/: README.md  fetch-openxr.sh  settings.gradle  setup-android-sdk.sh
client/quest/app/: build.gradle
client/quest/app/src/main/: AndroidManifest.xml
client/quest/app/src/main/cpp/: CMakeLists.txt  app.cpp  decoder.cpp  decoder.hpp  egl.cpp  egl.hpp  net_stream.cpp  net_stream.hpp  renderer.cpp  renderer.hpp
client/quest/app/src/main/java/com/metashare/client/: AudioDecoder.java  Keysyms.java  MainActivity.java  MonitorActivity.java  QuestToolbar.java  RemoteInputController.java  RtpReceiver.java  SessionInputForwarder.java  StreamSession.java  VideoDecoder.java
client/quest/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
flatpak/: dev.metashare.Streamer.yml  dev.metashare.StreamerUI.yml
flatpak/modules/: ffmpeg.yml  sdbus-cpp.yml  x264.yml
nix/: hm-module.nix  package.nix
scripts/: lint.sh
src/common/: base64.hpp  input_event.hpp  protocol.hpp  signaling.cpp  signaling.hpp  signaling_client.cpp  signaling_client.hpp
src/streamer/: audio_encoder.cpp  audio_encoder.hpp  audio_source.hpp  discovery.cpp  discovery.hpp  encoder.cpp  encoder.hpp  frame_source.hpp  input_sink.hpp  main.cpp  meson.build  mutter_screencast.cpp  mutter_screencast.hpp  mutter_virtual_dump.cpp  mutter_virtual_source.cpp  mutter_virtual_source.hpp  net_server.cpp  net_server.hpp  pacer.hpp  pipewire_audio_source.cpp  pipewire_audio_source.hpp  portal_pipewire_source.cpp  portal_pipewire_source.hpp  rtp_packetizer.cpp  rtp_packetizer.hpp  rtp_server.cpp  rtp_server.hpp  signaling_server.cpp  signaling_server.hpp  test_pattern_source.cpp  test_pattern_source.hpp  test_tone_source.cpp  test_tone_source.hpp  webrtc_server.cpp  webrtc_server.hpp
